2008-05-05  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/unsharp-mask.c (gen_convolve_matrix): fixed
	algorithm to calculate the center value. Fixes bug #530077.

2008-04-28  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/base/hue-saturation.c (hue_saturation): applied patch from
	Michael Deal that fixes use of the overlap option (bug #527085).

2008-04-21  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/curve_bend.c (run): fixed handling of
	"argc-lower-val-y" PDB parameter.

2008-04-16  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/config/test-config.c: initialize the units vtable in
	libgimpbase instead of trying to override symbols from it.
	Fixes bug #528160.

2008-04-07  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/MapObject/mapobject_main.c (query): fixed description
	of 'lighttype' parameter (bug #526679).

2008-04-03  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	* app/core/gimpimage-convert.c (gimp_image_convert): don't accept
	palettes with more than 256 colors.

	* tools/pdbgen/pdb/convert.pdb: fail here too for palettes
	with > 256 colors. Fixes bug #525471.

	* app/pdb/convert_cmds.c: regenerated.

2008-04-03  Jordi Mallach  <jordi@sindominio.net>

	* configure.in (ALL_LINGUAS): Add Valencian-Catalan (ca@valencia).

2008-03-30  Martin Nordholts  <martinn@svn.gnome.org>

	Merged from trunk:

	* app/widgets/gimpcontainertreeview-dnd.c
	(gimp_container_tree_view_drag_drop): Make all code paths result
	in a call to gtk_drag_finish() if we return TRUE. Fixes bug #317992.

2008-03-30  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/core/gimparea.c (gimp_area_list_free): don't leak the memory
	allocated for the GSList.

2008-03-30  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/xcf/xcf-load.c (xcf_load_image): don't leak the grid.

2008-03-30  Sven Neumann  <sven@gimp.org>
